# ig-feed-generator

./: .gitignore  LICENSE  README.md  Readme.md  SRS.md  Software Requirement Specification.docx  app.py  pyproject.toml
.github/workflows/: release.yaml
contentGeneration/: generate.py
static/css/: preview.css  style.css
static/js/: preview.js  script.js
templates/: inputForm.html  preview.html  register.html
